# react-native-call-log

./: CallLogsSpec.ts  LICENSE  README.md  index.d.ts  package.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/scizers/callLogs/: CallLogTurboModule.java  CallLogsTurboModulePackage.java  NativeCallLogTurboModuleSpec.java
android/src/main/jni/: CallLogsModule.cpp  CallLogsModule.h
